@@ -1,8 +1,8 @@
 Package: NanoStringNorm
 Type: Package
 Title: Normalize NanoString miRNA and mRNA Data
-Version: 1.1.21
-Date: 2015-11-17
+Version: 1.1.22
+Date: 2017-06-30
 Author: Daryl M. Waggott
 Maintainer: Paul Boutros <Paul.Boutros@oicr.on.ca>
 Depends: R (>= 2.14.0), gdata (>= 2.8.2), vsn (>= 3.22.0)
