@@ -9,8 +9,8 @@ A suite of functions for the normalization, visualization and differential expre
 \tabular{ll}{
 Package: \tab NanoStringNorm\cr
 Type: \tab Package\cr
-Version: \tab 1.0.0\cr
-Date: \tab 2011-09-15\cr
+Version: \tab 1.1.22\cr
+Date: \tab 2017-06-30\cr
 License: \tab GPL2 under?\cr
 LazyLoad: \tab yes\cr
 }
